# VovaCRM

./: docker-compose.yaml
crm/: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  settings.py
crm/dimedia/: admin.py  apps.py  forms.py  models.py
crm/dimedia/migrations/: 0001_initial.py  0002_alter_phonenumber_phone_number.py  0003_alter_phonenumber_phone_number.py  0004_remove_order_comment_order_comment.py  0005_remove_order_comment_delete_comment_order_comment.py  0006_alter_order_date_of_receipt.py  0007_alter_order_date_of_receipt_and_more.py  0008_alter_order_date_of_receipt_and_more.py  0009_alter_order_date_of_receipt_and_more.py  0010_alter_customer_phone_number_alter_customer_region_and_more.py  0011_alter_customer_phone_number_and_more.py  0012_alter_customer_phone_number_and_more.py  0013_alter_company_options_alter_customer_options_and_more.py  0014_order_user_alter_order_date_of_receipt_and_more.py  0015_status_color_alter_order_date_of_receipt_and_more.py  0016_email_phonenumber_alter_customer_company_and_more.py  0017_alter_customer_email_alter_customer_phone_number_and_more.py  0018_alter_order_date_of_receipt_and_more.py  0019_order_contact_person_alter_order_date_of_receipt_and_more.py
crm/vova_crm/: admin.py  admin.py.save  apps.py  forms.py  models.py
crm/vova_crm/migrations/: 0001_initial.py  0002_alter_phonenumber_phone_number.py  0003_alter_phonenumber_phone_number.py  0004_remove_order_comment_order_comment.py  0005_remove_order_comment_delete_comment_order_comment.py  0006_alter_order_date_of_receipt.py  (+11 more)
